# liza-proguic

./: .gitignore  .gitlab-ci.yml  .gitmodules  Makefile.am  README.hacking  README.md  autogen.sh  configure.ac
doc/: Makefile.am  compilation.texi  config.texi  liza-proguic.texi  liza.css  macros.texi  util.texi
src/: expand.xsl  init.xsl.in  meta.xsl  program-build-meta.xsl  program-calc-methods.xsl  program-data-api.xsl  program-preprocess.xsl  program.xsd  program.xsl  progui-class.xsl  progui-expand.xsl  progui-html.xsl  progui-pkg-map.xsl  progui-pkg.xsl  static.xsl
src/group/: accordion.xsl  collapsetable.xsl  default.xsl  group.xsl  sidetable.xsl  stacked.xsl  tabbed.xsl  tabbedblock.xsl  table.xsl
src/meta/: qtypes.xsl
src/question/: question.xsl
src/question/types/: address.xsl  all.xsl  ccExpDate.xsl  ccNumber.xsl  checkbox.xsl  city.xsl  currency.xsl  cvv2.xsl  datalist.xsl  date.xsl  dba.xsl  dollars.xsl  email.xsl  explain.xsl  float.xsl  initial.xsl  legacyradio.xsl  manualDate.xsl  name.xsl  noyes.xsl  number.xsl  percent.xsl  personalId.xsl  phone.xsl  radio.xsl  select.xsl  shortDate.xsl  state.xsl  submit.xsl  text.xsl  textarea.xsl  url.xsl  year.xsl  zip.xsl
src/util/: serialize.xsl
test/: meta.xspec  runner
test/util/: serialize.xsl  serialize.xspec
